--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,9 @@ buildscript {
         classpath "com.google.android.libraries.mapsplatform.secrets-gradle-plugin:secrets-gradle-plugin:2.0.1"
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.42'
     }
+    ext {
+        compose_version = '1.2.0'
+    }
 }
 plugins {
     id 'com.android.application' version '7.4.0' apply false
