--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ android {
     }
     composeOptions {
         kotlinCompilerExtensionVersion = "1.3.2"
+        //kotlinCompilerExtensionVersion = "1.7.20"
     }
     packagingOptions {
         resources {
@@ -50,6 +51,16 @@ android {
 }
 
 dependencies {
+    constraints {
+        //dupe class fix fra David Fraser
+        //https://stackoverflow.com/questions/75263047/duplicate-class-in-kotlin-android
+        implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.0") {
+            because("kotlin-stdlib-jdk7 is now a part of kotlin-stdlib")
+        }
+        implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.8.0") {
+            because("kotlin-stdlib-jdk8 is now a part of kotlin-stdlib")
+        }
+    }
     implementation "androidx.core:core-ktx:1.9.0"
     implementation "androidx.core:core:1.9.0"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
@@ -61,14 +72,16 @@ dependencies {
     // From https://www.jetpackcomposeversion.com/
     implementation "androidx.compose.ui:ui:1.3.2"
     //implementation "androidx.compose.material:material:1.3.1"
-    implementation 'com.google.android.material:material:1.1.0-alpha09'
+    //implementation 'com.google.android.material:material:1.1.0-alpha09'
+    implementation "androidx.compose.material:material:1.4.0"
     //implementation 'androidx.compose.material3:material3:1.1.0-alpha05'
+    implementation "androidx.compose.foundation:foundation:1.4.0"
 
     // Google maps
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
     implementation 'com.google.android.gms:play-services-location:21.0.1'
     // Google maps for compose
-    implementation 'com.google.maps.android:maps-compose:2.8.0'
+    implementation 'com.google.maps.android:maps-compose:2.11.2'
 
     // KTX for the Maps SDK for Android
     implementation 'com.google.maps.android:maps-ktx:3.2.1'
