--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,6 +77,10 @@ dependencies {
     //implementation 'androidx.compose.material3:material3:1.1.0-alpha05'
     implementation "androidx.compose.foundation:foundation:1.4.0"
 
+    // Navigasjon
+    def nav_version = "2.5.3"
+    implementation("androidx.navigation:navigation-compose:$nav_version")
+
     // Google maps
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
     implementation 'com.google.android.gms:play-services-location:21.0.1'
