--- a/app/build.gradle
+++ b/app/build.gradle
@@ -109,5 +109,7 @@ dependencies {
     implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1"
 
+    //Libraries for posisjon
+    implementation 'com.google.android.libraries.places:places:3.0.0'
 
 }
